[gd_scene load_steps=10 format=3 uid="uid://dwvv85mq1bth"]

[ext_resource type="Script" uid="uid://sn33ne0q4cs5" path="res://scripts/combat/combat_manager.gd" id="1"]
[ext_resource type="Script" uid="uid://bqehj2oaeosne" path="res://scripts/grid/grid_manager.gd" id="2"]
[ext_resource type="Script" uid="uid://crpc3ruji8uue" path="res://scripts/combat/turn_manager.gd" id="3"]
[ext_resource type="Script" uid="uid://dqehxm5ysyftp" path="res://scripts/movement/movement_controller.gd" id="4"]
[ext_resource type="PackedScene" path="res://scenes/ui/combat_hud.tscn" id="5"]
[ext_resource type="PackedScene" path="res://scenes/ui/help_overlay.tscn" id="6"]
[ext_resource type="Script" uid="uid://cchtxdeuy3x04" path="res://scripts/ui/fps_counter.gd" id="7"]
[ext_resource type="Script" path="res://scripts/camera/camera_controller.gd" id="8"]
[ext_resource type="Script" path="res://scripts/combat/combat_action_controller.gd" id="9"]

[node name="CombatArena" type="Node3D"]

[node name="CombatManager" type="Node" parent="."]
script = ExtResource("1")

[node name="GridManager" type="Node3D" parent="CombatManager"]
script = ExtResource("2")

[node name="TurnManager" type="Node" parent="CombatManager"]
script = ExtResource("3")

[node name="MovementController" type="Node" parent="CombatManager"]
script = ExtResource("4")

[node name="CombatActionController" type="Node" parent="CombatManager"]
script = ExtResource("9")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 10.5, 25, 18)
projection = 1
size = 30.0
far = 100.0
script = ExtResource("8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 0)
shadow_enabled = true

[node name="CombatHUD" parent="." instance=ExtResource("5")]

[node name="HelpOverlay" parent="." instance=ExtResource("6")]

[node name="FPSCounter" type="CanvasLayer" parent="."]

[node name="FPSLabel" type="Label" parent="FPSCounter"]
offset_left = 10.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 33.0
text = "FPS: 60"
script = ExtResource("7")
